# gold_price_scraper

./: .gitignore  LICENSE  README.md  gold_premiums.csv  main.py  pyproject.toml
expenses/: README.md  app.py  credit_card_expenses.py  start_dashboard.sh
expenses/templates/: dashboard.html
gold/: README.md  gold_premiums.csv  main.py  portfolio.py
investing/: README.md  investing.py  sp500_investment_growth_with_raise.csv
openinsider/: README.md  __main__.py  config.py  db.py  pipeline.py
openinsider/analysis/: clusters.py  enrichment.py  research_stats.py  scoring.py  signals.py
openinsider/data/: 10b5_1_progress.json  backfill_progress.json  research_stats.json
openinsider/ingestion/: ingest.py  scraper.py
openinsider/integrations/: llm_analyst.py  notifications.py
openinsider/research/: backtest.py  watchlist.py
openinsider/scripts/: __main__.py  backfill.py  enrich_10b5_1.py  rescore.py  run_pipeline.sh  start_dashboard.sh
openinsider/web/: app.py
openinsider/web/templates/: company.html  dashboard.html  insider.html
tatra_banka_interest_rates/: README.md  run_scraper.sh  scrape_tatrabanka_mortgage.py  tatrabanka_mortgage_rates.csv
