[project]
name = "gold-price-scraper"
version = "0.1.0"
description = "Fetch gold spot prices and calculate gold bar premiums by parsing zlataky.sk"
authors = [{ name = "Daniel Skala", email = "danko.skala@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.8.1",
    "plotly>=5.15.0",
    "yfinance==0.2.58",
    "beautifulsoup4>=4.11.1",
    "tabulate>=0.9.0",
    "matplotlib>=3.8.4",
    "numpy>=1.26.4",
    "scikit-learn>=1.3.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "selenium>=4.36.0",
    "openai>=1.0",
]

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
